# native-sparse-attention

./: .gitignore  README.md  pyproject.toml  setup.py  train_nsa_vs_full.py
.github/workflows/: pr.yaml
experiments/: demo_nsa.py
native_sparse_attention/: pytorch_reference.py
native_sparse_attention.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: axe1_attention_patterns.ipynb  axe2_arithmetic_intensity.ipynb  axe5_needle_haystack.ipynb
report/: nsa_report.aux  nsa_report.out  nsa_report.tex
