[project]
name = "native_sparse_attention"
dynamic = ["version"]
description = "Trtion kernels for Native Sparse Attention"
readme = "README.md"
authors = [
    { name = "Yentl Collin", email = "yentl.collin@universite-paris-saclay.fr" },
    { name = "Gaspard Beaudoin" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
    "transformers>=4.45.0",
    "triton>=3.0",
    "datasets>=3.3.0",
    "einops",
    "ninja",
]

[project.optional-dependencies]
conv1d = ["causal-conv1d>=1.4.0"]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/YentlCollin/native-sparse-attention"

[build-system]
requires = ["setuptools>=45", "wheel", "ninja", "torch"]
build-backend = "setuptools.build_meta"

[tool.isort]
line_length = 127
multi_line_output = 3